# monclia

./: .gitignore  .gitmodules  LICENSE  README.md  build.gradle  gradle.properties  settings.gradle
.github/workflows/: build-apk.yml  build-deps.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: orchestrator.sh  wallet-stub.sh
app/src/main/cpp/: CMakeLists.txt  pty_bridge.cpp  wallet_jni.cpp
app/src/main/java/io/monclia/: Logger.kt  MoncLiaApp.kt  PtyBridge.kt  TerminalActivity.kt  WalletCliHandler.kt  WalletJni.kt  WalletService.kt
app/src/main/res/values/: strings.xml  themes.xml
config/: default_nodes.json
scripts/: build-boost.sh  build-libiconv.sh  build-libsodium.sh  build-libunbound.sh  build-libzmq.sh  build-monero-libs.sh  build-openssl.sh
